fixed scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -28,16 +17,6 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-
 
 html { 
   background: url(/src/Assets/wood_background.jpg) no-repeat center center fixed; 
@@ -46,3 +25,23 @@ html {
   -o-background-size: cover;
   background-size: cover;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+
+::-webkit-scrollbar-track {
+  background: #ff000000;
+  margin-top: 1ch;
+  margin-bottom: 1ch;
+  border-radius: 199ch;
+}
+
+
+::-webkit-scrollbar-thumb {
+  background: rgba(255, 255, 255, 0);
+  border-radius: 145ch;
+  box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.3);
+}
+
